# vdjtools

./: .gitignore  .venv  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  README.md  ROADMAP.md  SOURCES.md  SUGGESTED_EDITS.md  environment.yml  pyproject.toml  setup.sh
.github/workflows/: ci.yml  docs.yml  publish.yml
appendix/: .gitignore  .latexmkrc  Makefile  accept_gate.py  assoc_depth.py  bench_biomarker.py  bench_em.py  bench_pgen.py  bm_ankspond.py  bm_biomarkers.py  bm_cmv.py  bm_covid.py  bm_covid_fuzzy.py  bm_diag_fair.py  bm_diag_published.py  bm_hla.py  bm_imprint.py  bm_motif_hla.py  bm_pair.py  bm_seed.py  bm_vacc.py  bm_validate.py  bm_vdjdb_overlap.py  build_bundled_models.py  compare_models.py  concordance.py  cooccurrence_fpr.py  depth_gate.py  murugan_model.tex  refs.bib  theta_ceiling.py  validate_batch_covid.py
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt  usage.rst
examples/: README.md  aging.py  aging_airr_benchmark.py  aging_manifest.json  ankspond_motif.py  biomarker_explorer.py  cdr_features.py  emerson_biomarker.py  emerson_cmv_hla.py  model_explorer.py  overlap_similarity.py  preprocess.py  run.sh  scale_cohort.py  single_cell.py  vaccination_tracking.py
include/vdjtools/: core.hpp  inext.hpp  model.hpp
notebooks/: aging.py  ankspond_motif.py  biomarker_explorer.py  model_explorer.py  vaccination_tracking.py
python/vdjtools/: __init__.py
python/vdjtools/biomarker/: __init__.py  association.py  condition.py  cooccurrence.py  fisher.py  metaclonotype.py  stats.py
python/vdjtools/cli/: __init__.py  __main__.py
python/vdjtools/dynamics/: __init__.py  capture.py  expansion.py  groups.py  paired.py
python/vdjtools/features/: __init__.py  kmer.py  physchem.py
python/vdjtools/io/: __init__.py  batch.py  cohort.py  convert.py  read.py  schema.py
python/vdjtools/model/: __init__.py  analyze.py  bundled.py  collapse.py  data.py  dd.py  events.py  generate.py  infer.py  io.py  model.py  native.py  pgen.py  reference.py  rescale.py  schema.py  stitch.py
python/vdjtools/model/_bundled/arda/human_IGH/: d2_del.parquet  d2_gene.parquet  d_del.parquet  d_gene.parquet  dd_dinucl.parquet  dd_ins.parquet  dj_dinucl.parquet  dj_ins.parquet  genes_d.parquet  genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  n_d.parquet  v_3_del.parquet  v_choice.parquet  vd_dinucl.parquet  vd_ins.parquet
python/vdjtools/model/_bundled/arda/human_IGK/: genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  v_3_del.parquet  v_choice.parquet  vj_dinucl.parquet  vj_ins.parquet
python/vdjtools/model/_bundled/arda/human_IGL/: genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  v_3_del.parquet  v_choice.parquet  vj_dinucl.parquet  vj_ins.parquet
python/vdjtools/model/_bundled/arda/human_TRA/: genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  v_3_del.parquet  v_choice.parquet  vj_dinucl.parquet  vj_ins.parquet
python/vdjtools/model/_bundled/arda/human_TRB/: d2_del.parquet  d2_gene.parquet  d_del.parquet  d_gene.parquet  dj_dinucl.parquet  dj_ins.parquet  genes_d.parquet  genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  v_3_del.parquet  v_choice.parquet  vd_dinucl.parquet  vd_ins.parquet
python/vdjtools/model/_bundled/arda/human_TRD/: d2_del.parquet  d2_gene.parquet  d_del.parquet  d_gene.parquet  dd_dinucl.parquet  dd_ins.parquet  dj_dinucl.parquet  dj_ins.parquet  genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  n_d.parquet  v_3_del.parquet  v_choice.parquet  vd_dinucl.parquet  vd_ins.parquet
python/vdjtools/model/_bundled/arda/human_TRG/: genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  v_3_del.parquet  v_choice.parquet  vj_dinucl.parquet  vj_ins.parquet
python/vdjtools/model/_bundled/arda/mouse_TRA/: genes_j.parquet  genes_v.parquet  j_5_del.parquet  j_choice.parquet  manifest.json  v_3_del.parquet  v_choice.parquet  vj_dinucl.parquet  vj_ins.parquet
python/vdjtools/model/_bundled/arda/mouse_TRB/: d2_del.parquet  d2_gene.parquet  (+16 more)
python/vdjtools/overlap/: __init__.py  alice.py  cluster.py  fuzzy.py  metrics.py  similarity.py  tcrnet.py  track.py
python/vdjtools/preprocess/: __init__.py  batch.py  correct.py  decontaminate.py  downsample.py  filter.py  join.py  pool.py
python/vdjtools/sc/: __init__.py  anndata.py  cluster_eval.py  pair.py  pgen.py  read.py
python/vdjtools/stats/: __init__.py  diversity.py  functional.py  inext.py  rarefaction.py  spectratype.py  usage.py
scripts/: biomarker_bench.sbatch
skills/vdjtools/: SKILL.md
src/: _bindings.cpp  core.cpp  inext.cpp  pgen.cpp
src/main/resources/rscripts/: cdr3aa_profile.r  cluster_permutations_plot.r  cluster_samples.r  fancy_spectratype.r  install.r  intersect_pair_area.r  intersect_pair_area_v2.r  intersect_pair_scatter.r  join_venn.r  pairwise_distance_plot.r  plot_time_series.r  quantile_stats.r  rarefaction_curve.r  test.r  tracking_heatcourse.r  tracking_similarity_map.r  tracking_stackplot.r  vexpr_plot.r  vj_pairing_plot.r
tests/assets/: inext_oracle.R  spider_girdled.txt  spider_logged.txt
tests/cpp/: test_core.cpp
tests/python/: conftest.py  test_analyze.py  test_biomarker_association.py  test_biomarker_cooccurrence.py  test_biomarker_fuzzy.py  test_biomarker_stats.py  test_bundled.py  test_cli.py  test_cohort_benchmark.py  test_cohort_stats.py  test_collapse.py  test_convert.py  test_count_float_format.py  test_dd.py  test_diversity.py  test_dynamics_capture.py  test_dynamics_paired.py  test_fisher.py  test_full_germline.py  test_functional.py  test_gene_masks.py  test_gene_prior.py  test_generate.py  test_inext.py  test_inext_benchmark.py  test_inext_native.py  test_inext_native_benchmark.py  test_infer.py  test_io.py  test_io_batch.py  test_io_benchmark.py  test_io_cohort.py  test_io_hf.py  test_io_parquet.py  test_kmer.py  test_metaclonotype.py  test_mirpy_parity.py  test_model_loader.py  test_model_reads.py  test_native.py  (+34 more)
(+372 files in other folders)
