[build-system]
requires = ["scikit-build-core>=0.12", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "vdjtools"  # if the PyPI name is taken, fall back to a distinct dist name (cf. arda -> arda-mapper)
version = "2.1.0"
description = "TCR/BCR repertoire analysis — Pgen/generation/inference, diversity, overlap, biomarkers (Python + C++)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Mikhail Shugay", email = "mikhail.shugay@gmail.com" }]
keywords = ["immunology", "tcr", "bcr", "airr", "repertoire", "pgen", "olga", "igor", "bioinformatics"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
# Base deps are kept to what the currently-implemented code imports; the parent libraries
# (arda-mapper, vdjmatch->seqtree) are promoted from the extras below to base deps as the
# phases that import them land (model -> arda, overlap -> vdjmatch). Every dep traces to a use.
dependencies = [
    "polars>=1.0",
    "numpy",
    "scipy",
    "typer>=0.12",  # the `vdjtools` CLI (Phase 8) is a core entry point
]

[project.scripts]
vdjtools = "vdjtools.cli:app"

[project.optional-dependencies]
model = ["arda-mapper>=2.5"]           # Phase 1: scenario enumeration + markup repair (brings mmseqs2)
overlap = ["vdjmatch>=0.0.1", "seqtree>=0.3", "scikit-learn"]  # Phase 4: overlap + TCRnet (brings the seqtree engine); sklearn for MDS clustering; seqtree for similarity-weighted (TINA) overlap
preprocess = ["seqtree>=0.3"]          # Phase 5: freq-based error correction (near-neighbour search)
sc = ["scikit-learn", "pyyaml", "anndata", "huggingface_hub"]  # Phase 7: single-cell — sklearn for cluster_eval contingency, pyyaml for AIRR Cell export, anndata for the scverse bridge (to_anndata), HF for the dCODE benchmark fetch (tests only)
examples = ["marimo", "huggingface_hub", "matplotlib", "scikit-learn"]  # example notebooks (scipy is a base dep)
oracle = ["olga"]                      # Pgen cross-check oracle (tests only)
test = ["pytest>=7.4", "pytest-cov"]
bench = ["huggingface_hub"]  # test-only: real-data fetch; never a runtime dep
docs = ["sphinx>=7", "pydata-sphinx-theme>=0.15", "nbsphinx"]
dev = ["ruff", "pytest>=7.4", "pybind11>=2.12"]
all = ["arda-mapper>=2.5", "vdjmatch>=0.0.1"]

[project.urls]
Homepage = "https://github.com/antigenomics/vdjtools"
Repository = "https://github.com/antigenomics/vdjtools"
Documentation = "https://antigenomics.github.io/vdjtools/"

[tool.scikit-build]
wheel.packages = ["python/vdjtools"]
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"
# Ext compiles at install time; flip to true during C++-heavy work for recompile-on-import.
editable.rebuild = false
# Keep the sdist lean (build inputs only); anchor paths with a leading "/". README logos (assets/),
# dev docs, the LaTeX appendix, and stray scratch files must not ship to PyPI — the wheel carries
# just the package + compiled _core.
sdist.exclude = [
    "/tests", "/docs", "/.github", "/setup.sh", "/build", "/examples", "/assets",
    "/appendix", "/CLAUDE.md", "/ROADMAP.md", "/SOURCES.md", "/arda-ref.md",
]

[tool.scikit-build.cmake.define]
VDJTOOLS_PYTHON = "ON"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests/python"]
addopts = "-ra -m 'not slow'"
markers = ["slow: heavier oracle / reference-arithmetic checks (e.g. vs OLGA's own slow Pgen); run with -m slow"]
